# ProjectMinimal

./: .gitignore  .gitmodules  OSX-Build-wxWidgets  Windows-Build-wxWidgets-vs2010.bat  Windows-CreateSymLinksForData.bat  premake5.lua
GameMinimalReplaceMe/: CMakeLists.txt  MinimalReplaceMe.sln  build.sh  premake5inc.lua
GameMinimalReplaceMe/Game/: MinimalReplaceMe.vcxproj  MinimalReplaceMe.vcxproj.filters
GameMinimalReplaceMe/Game/Data/Shaders/: Shader_Texture.glsl  Shader_White.glsl
GameMinimalReplaceMe/Game/MinimalReplaceMe.xcodeproj/: project.pbxproj
GameMinimalReplaceMe/Game/MinimalReplaceMe.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
GameMinimalReplaceMe/Game/SourceAndroid/: main.cpp
GameMinimalReplaceMe/Game/SourceAndroid/AndroidApk/: .project  AndroidManifest.xml  build.xml
GameMinimalReplaceMe/Game/SourceAndroid/AndroidApk/res/values/: strings.xml
GameMinimalReplaceMe/Game/SourceAndroid/AndroidApk/src/com/flathead/MinimalReplaceMePackage/: MinimalReplaceMeActivity.java
GameMinimalReplaceMe/Game/SourceBlackBerry/: .cproject  .project  bar-descriptor.xml
GameMinimalReplaceMe/Game/SourceBlackBerry/src/: main.cpp
GameMinimalReplaceMe/Game/SourceCommon/: GameCommonHeader.h  GamePCH.cpp  GamePCH.h
GameMinimalReplaceMe/Game/SourceCommon/Core/: GameMinimalReplaceMe.cpp  GameMinimalReplaceMe.h
GameMinimalReplaceMe/Game/SourceEmscripten/: emMain.cpp  httpd_Debug.py  httpd_Release.py
GameMinimalReplaceMe/Game/SourceIOS/: MinimalReplaceMe-Info.plist  main.mm
GameMinimalReplaceMe/Game/SourceLinux/: LinuxMain.cpp
GameMinimalReplaceMe/Game/SourceNaCL/: MainModule.cpp
GameMinimalReplaceMe/Game/SourceNaCL/Web/: myframework.nmf  myframework_dbg.nmf
GameMinimalReplaceMe/Game/SourceOSX/: AppDelegate.mm  MyOpenGLView.mm
GameMinimalReplaceMe/Game/SourceWP8/: CubeRenderer.cpp  Direct3DBase.cpp  WP8Main.cpp
GameMinimalReplaceMe/Game/SourceWindows/: WinMain.cpp  WinMainWx.cpp
GameMinimalReplaceMe/MinimalReplaceMe.xcworkspace/: contents.xcworkspacedata
GameMinimalReplaceMe/MinimalReplaceMe.xcworkspace/xcshareddata/: MinimalReplaceMe.xccheckout
